testsuite/tests/tlks/should_fail/all.T
test('tlks007_fail', normal, compile_fail, [''])
test('tlks_fail001', normal, compile_fail, [''])
test('tlks_fail002', normal, compile_fail, [''])
test('tlks_fail003', normal, compile_fail, [''])
test('tlks_fail004', normal, compile_fail, [''])
test('tlks_fail005', normal, compile_fail, [''])
test('tlks_fail006', normal, compile_fail, [''])
test('tlks_fail007', normal, compile_fail, [''])
test('tlks_fail008', normal, compile_fail, [''])
test('tlks_fail009', normal, compile_fail, [''])
test('tlks_fail010', normal, compile_fail, [''])
test('tlks_fail011', normal, compile_fail, [''])
test('tlks_fail012', normal, compile_fail, [''])
